NAM| Validar Login
validar el login

--- a/Angular_SICDOC/sicdoc/src/app/app.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/app.component.html
@@ -7,8 +7,8 @@
 <!-- Componentes De Maquetacion | Barra de Navegacion -->
 <app-navbar></app-navbar>
 
-<!-- Componentes De Maquetacion | Login de Usuario -->
-<!-- Componentes De Maquetacion | Barra de Navegacion -->
-<app-login></app-login>
+<div class="main-container">
+  <router-outlet></router-outlet>
+</div>
 
 <!-- <app-login></app-login> -->
