--- a/Angular_SICDOC/sicdoc/src/app/views/login/login.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/login.html
@@ -1,17 +1,20 @@
 
 <hr />
-<div class="container" >
+<div class="container animated fadeIn fast ">
 <div class="row" style="margin-top:20px, margin-left:300px">
     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-		<form role="form">
+		<form   (ngSubmit)="onSubmit()"  role="form">
 			<fieldset>
 				<h2>{{ titulo }}</h2>
 				<hr class="colorgraph">
 				<div class="form-group">
-                    <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address">
+                    <input type="email" name="email" id="email" ngControl="email" ngModel="user.email"
+                    class="form-control input-lg" required placeholder="Email Address">
+
+                    <!-- <span *ngIf="!email.valid" >El email es obligatorio</span> -->
 				</div>
 				<div class="form-group">
-                    <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password">
+                    <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password" required>
 				</div>
 				<span class="button-checkbox">
 					<!-- <button type="button" class="btn" data-color="info">Recuerdame</button>
@@ -21,10 +24,11 @@
 				<hr class="colorgraph">
 				<div class="row">
 					<div class="col-xs-6 col-sm-6 col-md-6">
-                        <input type="submit" class="btn btn-lg btn-success btn-block" value="Ingresar">
+              <!-- <a class="btn btn-lg btn-success btn-block" [routerLink]="['index']">Ingresar</a> -->
+              <input type="submit" class="btn btn-lg btn-success btn-block" value="Ingresar" ng-click="onSubmit()" >
 					</div>
 					<div class="col-xs-6 col-sm-6 col-md-6">
-						<a href="/#" class="btn btn-lg btn-primary btn-block" >Registrarme</a>
+						<a class="btn btn-lg btn-primary btn-block" [routerLink]="['registro']">Registrarme</a>
 					</div>
 				</div>
 			</fieldset>
