--- a/Angular_SICDOC/sicdoc/src/app/views/shared/navbar.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/navbar.component.html
@@ -4,46 +4,41 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="#">Dashboard</a>
+    <a class="navbar-brand" [routerLink]="['index']" >Dashboard</a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
       <!-- Menu de Ingreso y Mantenimiento de Comunicacion -->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#/" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Comunicaciones
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Entrada de Comunicacion</a>
-          <a class="dropdown-item" href="#">Respuesta de Comunicacion</a>
-          <a class="dropdown-item" href="#">Salida de Comunicacion</a>
+          <a class="dropdown-item" [routerLink]="['registro']" routerLinkActive="active">Entrada de Comunicacion</a>
+          <a class="dropdown-item" href="#/" routerLinkActive="active">Respuesta de Comunicacion</a>
+          <a class="dropdown-item" href="#/" routerLinkActive="active">Salida de Comunicacion</a>
         </div>
       </li>
 
       <!-- Menu de Seguimiento -->
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <li class="nav-item dropdown" >
+        <a class="nav-link dropdown-toggle" href="/#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Seguimiento
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Agregar Actividad</a>
-          <a class="dropdown-item" href="#">Finalizar Actividad</a>
-          <a class="dropdown-item" href="#">Agregar Documentos / Actividad</a>
+          <a class="dropdown-item" href="#/" routerLinkActive="active">Agregar Actividad</a>
+          <a class="dropdown-item" href="#/" routerLinkActive="active">Finalizar Actividad</a>
+          <a class="dropdown-item"  routerLinkActive="active">Agregar Documentos / Actividad</a>
         </div>
       </li>
 
-      <!--
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-      -->
-
     </ul>
+
+    <ul class="navbar-nav">
+     <li class="nav-item">
+      <a class="nav-link" [routerLink]="['login']">Cerrar Sesion</a>    
+    </li>
+   </ul>
+
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
