--- a/Angular_SICDOC/sicdoc/src/app/views/login/login.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/login.html
@@ -1,20 +1,25 @@
 
 <hr />
-<div class="container animated fadeIn fast ">
-<div class="row" style="margin-top:20px, margin-left:300px">
+<div class="container animated fadeIn fast " style="margin-top:20px, margin-left:300px">
+<div class="row">
     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-		<form   (ngSubmit)="onSubmit()"  role="form">
+		<form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)" name="loginForm" role="form" novalidate>
 			<fieldset>
 				<h2>{{ titulo }}</h2>
 				<hr class="colorgraph">
-				<div class="form-group">
-                    <input type="email" name="email" id="email" ngControl="email" ngModel="user.email"
-                    class="form-control input-lg" required placeholder="Email Address">
+				<div class="form-group " >
+                    <input type="email" name="email" id="email" #email="ngModel" ngControl="email" [(ngModel)]="user.email"
+                    class="form-control input-lg" required minlength=10 placeholder="Email Address" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
 
-                    <!-- <span *ngIf="!email.valid" >El email es obligatorio</span> -->
+                    <span *ngIf="email.errors?.pattern" >El campo no tiene formato de Correo</span>
+                    <span *ngIf="email.errors?.required" >El email es obligatorio</span>
 				</div>
 				<div class="form-group">
-                    <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password" required>
+                    <input #password="ngModel" ngControl="password" [(ngModel)]="user.password" type="password"
+                    name="password" id="password" class="form-control input-lg" placeholder="Password" required minlength=5>
+
+                    <span *ngIf="password.errors?.minlength" >Se nesesiat por lo menos {{ password.errors.minlength.requiredLength }} caracteres</span>
+                    <span *ngIf="password.errors?.required" >El password es obligatorio</span>
 				</div>
 				<span class="button-checkbox">
 					<!-- <button type="button" class="btn" data-color="info">Recuerdame</button>
