--- a/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/login.component.html
@@ -33,7 +33,7 @@
               <input type="submit" class="btn btn-lg btn-success btn-block" value="Ingresar" ng-click="onSubmit()" >
 					</div>
 					<div class="col-xs-6 col-sm-6 col-md-6">
-						<a class="btn btn-lg btn-primary btn-block" [routerLink]="['registro']">Registrarme</a>
+						<a class="btn btn-lg btn-primary btn-block" [routerLink]="['/registro']">Registrarme</a>
 					</div>
 				</div>
 			</fieldset>
