--- a/Angular_SICDOC/sicdoc/src/app/views/shared/header.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/shared/header.component.html
@@ -1,4 +1,6 @@
+<div class="col-12">
 <div class="page-header">
   <img src="../assets/img/sreci.png" class="img-fluid pull-xs-left" alt="..." style="width:250px">
   <h1 style=" font-family: -system-ui ">Sistema de Control de Documentación <small>| SICDOC | SDCI</small></h1>
 </div>
+<div>
