--- a/Angular_SICDOC/sicdoc/src/app/views/login/register.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/login/register.component.html
@@ -170,15 +170,15 @@
   					</div>
   				</div>
 
-          <div class="col-xs-12 col-sm-6 col-md-12">
+          <!-- <div class="col-xs-12 col-sm-6 col-md-12">
   					<div class="form-group">
               <select #idDeptoFuncional="ngModel" class="form-control"  name="idDeptoFuncional" id="idDeptoFuncional" ngControl="idDeptoFuncional" [(ngModel)]="user.idDeptoFuncional">
                   <option value="0">Selecciona una Opcion</option>
-                  <option *ngFor="let list of JsonOutgetlistaDeptosFuncionales" value='{{ list.idDeptoFuncional }}'>{{ list.descDeptoFuncional }}</option>
+                  <option *ngFor="let list of JsonOutgetlistaDeptosFuncionales" value='{{ list.idDireccionSreci }}'>{{ list.descDireccionSreci }}</option>
               </select>
               <small class="form-text text-muted" *ngIf="idDeptoFuncional.value == 0 || idDeptoFuncional.value == null " >Debes Seleccionar un Departamento Funcional</small>
   					</div>
-  				</div>
+  				</div> -->
   			</div>
       </div>
 
